feat(policy): persist policy to file on REST/gRPC updates
when a policy file path is configured (via CLI --policy-file), policy
updates via PUT /api/v1/policy or gRPC set_policy are now atomically
written to disk. uses tempfile + rename for crash-safe writes.
persistence failures are logged but don't fail the request

--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -88,6 +88,9 @@ tower_governor = { version = "0.8", default-features = false, features = [
 # Rate limiting for DERP/STUN
 governor = "0.10"
 
+# Atomic file writes
+tempfile = "3"
+
 [dev-dependencies]
 tower = "0.5"
 hyper = "1.8"
