--- a/crates/railscale-admin/Cargo.toml
+++ b/crates/railscale-admin/Cargo.toml
@@ -22,6 +22,7 @@ chrono = { workspace = true }
 ipnet = { workspace = true }
 hex = "0.4"
 hyper-util = { version = "0.1", features = ["tokio"] }
+tempfile = "3"
 
 [build-dependencies]
 tonic-build = "0.14"
