--- a/crates/railscale/Cargo.toml
+++ b/crates/railscale/Cargo.toml
@@ -71,6 +71,7 @@ rustls = { version = "0.23", default-features = false, features = [
 ] }
 rustls-pemfile = "2"
 sha2 = "0.10"
+hmac = "0.12"
 tokio-rustls = "0.26"
 
 # Compression
