--- a/crates/railscale-proto/Cargo.toml
+++ b/crates/railscale-proto/Cargo.toml
@@ -14,6 +14,7 @@ thiserror = { workspace = true }
 chrono = { workspace = true }
 base64 = { workspace = true }
 snow = "0.10"
+chacha20poly1305 = "0.10"
 
 [dev-dependencies]
 proptest = "1.9"
