--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,9 @@ tokio = { version = "1", features = ["full"] }
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
 
+# Derive macros
+derive_more = { version = "1", features = ["as_ref", "display"] }
+
 # Error handling
 thiserror = "2"
 anyhow = "1"
