--- a/crates/railscale-types/Cargo.toml
+++ b/crates/railscale-types/Cargo.toml
@@ -9,6 +9,7 @@ license.workspace = true
 serde = { workspace = true }
 serde_json = { workspace = true }
 thiserror = { workspace = true }
+derive_more = { workspace = true }
 chrono = { workspace = true }
 ipnet = { workspace = true }
 email_address = { workspace = true }
